--- a/Css/site.css
+++ b/Css/site.css
@@ -1,5 +1,12 @@
 
 .fancy-header {
+    margin: 50px auto;
+    width: 500px;
+    padding: 10px;
     color: blue;
     text-decoration: underline;
+    font-weight: bold;
+	selector-todo 
+    clear:both;
+
 }
