CSS Properties Exercise
1.Open up your hello_world.html file from your Codeup folder.

2.Add a style to change the color of the headers on your page and make them underlined.

3.Add a style to change the background color of the page.
Add a style to add a background image to your page. Search how to manipulate the position, sizing of this background image.

4.Add a style to change the list-style to something other than the default bullet.

5.Add a style to change the font for the entire page. Use google fonts if you would like Google Fonts.

6.Add a style to change the table, table cells td and rows tr padding and font sizes.

7.Add a style to alter the anchor tags and its different states. (e.g. link, visited, hover and active).

--- a/Css/site.css
+++ b/Css/site.css
@@ -10,3 +10,36 @@
     clear:both;
 
 }
+body {
+color: red;
+background-color: #DBF9FC;
+background-image: url(https://img.redbull.com/images/c_crop,x_0,y_0,h_2203,w_4896/c_fill,w_1680,h_756/q_auto,f_auto/redbullcom/2018/11/27/325118c5-1118-4dfb-82b5-4e5958acaa40/red-bull-zera-o-pico-2018-guaratinga-brazil); 
+font-family: Helvetica, Arial, Sans-Serif;
+}
+
+img {  
+max-width: 100%;  
+height: auto;  
+}  
+
+ol {
+    list-style: upper-alpha;
+}
+ul {
+    list-style: square;
+}
+
+td {
+	font-weight: bold;
+}
+
+tr {
+	font-weight: bold;
+}
+
+a:link {
+  color: mediumseagreen;
+}
+
+a:hover {
+  color: hotpink;
