--- a/Css/box_model.css
+++ b/Css/box_model.css
@@ -1,11 +1,13 @@
 .box {
 	border: 1px solid black;
-	width: 150px;
+	width: 50px;
 	height: 50px;
 	padding: 10px;
 	font-weight: bold;
 	color: white;
-	margin-bottom: 10px;
+	margin-top: 50px;
+	margin-right: 50px;
+	font-size: 15px;
 }
 
 #box-red {
@@ -14,26 +16,25 @@
 
 #box-orange {
 	background-color: orange;
-	margin-left: 30px;
+	
 }
 
 #box-yellow {
 	background-color: yellow;
-	margin-left: 60px;
+	
 }
 
 #box-green {
 	background-color: green;
-	margin-left: 90px;
+	
 }
 
 #box-blue {
 	background-color: blue;
-	margin-left: 120px;
 }
 
 #box-violet {
 	background-color: violet;
-	margin-left: 150px;
+	
 }
 
